namespaces/live-1.cloud-platform.service.justice.gov.uk/formbuilder-publisher-test/00-namespace.yaml
---
# Source: formbuilder-publisher/templates/00-namespace.yaml
# auto-generated from fb-cloud-platforms-environments
apiVersion: v1
kind: Namespace
metadata:
  name: formbuilder-publisher-test
  labels:
    # for fb's own purposes
    name: formbuilder-publisher-test
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "test"
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "transformed-department"
    cloud-platform.justice.gov.uk/application: "formbuilder-publisher"
    cloud-platform.justice.gov.uk/owner: "Form Builder: formbuilder@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/fb-publisher"
    cloud-platform.justice.gov.uk/slack-channel: "moj-online-devs"
